[tool.poetry]
name = "scheduler-profilers"
version = "0.3.0"
description = "Profile the dask distributed scheduler with py-spy or viztracer"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
distributed = ">=2.30.0"
py-spy = "^0.3.4"
numpy = {version = "^1.20.2", optional = true}
pandas = {version = "^1.2.4", optional = true}
pytest = {version = "^6.2.3", optional = true}
pytest-docker-compose = {version = "^3.2.1", optional = true}
pytest-asyncio = {version = "^0.15.1", optional = true}
dask = {extras = ["array", "dataframe"], version = ">=2.30.0", optional = true}
bokeh = {version = "^2.3.1", optional = true}
ipython = {version = "^7.23.1", optional = true}
jupyter-client = {version = "^6.2.0", optional = true}
ipykernel = {version = "^5.5.4", optional = true}
viztracer = "^0.12.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
coiled = "^0.0.39"
shed = "^0.3.5"

[tool.poetry.extras]
docker = ["numpy", "pandas", "dask", "bokeh", "ipython", "jupyter-client", "ipykernel"]
test = ["numpy", "pandas", "dask", "pytest", "pytest-docker-compose", "pytest-asyncio"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
