[tool.poetry]
name = "scheduler-profilers"
version = "0.3.0"
description = "Profile the dask distributed scheduler with py-spy or viztracer"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
distributed = ">=2.30.0"
py-spy = "^0.3.9"
viztracer = "^0.12.3"

[tool.poetry.group.docker.dependencies]
bokeh = "^2.3.1"
ipython = "^7.23.1"

[tool.poetry.group.test.dependencies]
dask = {extras = ["array", "dataframe"], version = ">=2.30.0"}
pytest = "^6.2.3"
pytest-docker-compose = "^3.2.1"
pytest-asyncio = "^0.15.1"
shed = "^0.3.5"
flake8 = "^3.9.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
