[tool.poetry]
name = "dask-pyspy"
version = "0.4.0"
description = "Profile dask distributed clusters with py-spy"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
distributed = ">=2.30.0"
py-spy = "^0.3.9"

[tool.poetry.group.docker.dependencies]
bokeh = "^2.3.1"
ipython = "^7.23.1"
dask = {extras = ["array", "dataframe"], version = ">=2.30.0"}

[tool.poetry.group.test.dependencies]
pytest = "^6.2.3"
pytest-docker-compose = "^3.2.1"
pytest-asyncio = "^0.15.1"
shed = "^0.3.5"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
